WebCore/rendering/RenderBox.h
@@ -113,6 +113,7 @@ public:
     // Whether or not the element shrinks to its intrinsic width (rather than filling the width
     // of a containing block).  HTML4 buttons, <select>s, <input>s, legends, and floating/compact elements do this.
     bool sizesToIntrinsicWidth(WidthType) const;
+    virtual bool stretchesToMinIntrinsicWidth() const { return false; }
 
     int calcWidthUsing(WidthType, int cw);
     int calcHeightUsing(const Length& height);
